fixing up some layout issues

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -404,7 +404,7 @@ h6,
 
   .h1,
   h1 {
-    font-size: 2.827rem;
+    font-size: 2.627rem;
   }
 
   .h2,
@@ -447,12 +447,12 @@ h6,
 @media screen and (min-width: 64em) {
   .h1,
   h1 {
-    font-size: 4.498rem;
+    font-size: 3.5rem;
   }
 
   .h2,
   h2 {
-    font-size: 3.18rem;
+    font-size: 2.6rem;
   }
 
   .h3,
